fix path to background

--- a/#src/scss/_instructors.scss
+++ b/#src/scss/_instructors.scss
@@ -1,7 +1,7 @@
 .instructors {
 
   &__header {
-    background: url('/img/instructors/bg-instructors.png') no-repeat center right / cover;
+    background: url('../img/instructors/bg-instructors.png') no-repeat center right / cover;
 
     .title-section {
       margin: 0 auto;
