--- a/#src/scss/_main.scss
+++ b/#src/scss/_main.scss
@@ -91,7 +91,7 @@
 
 .main::before {
   content            : "";
-  background-image   : url('/img/main/bg-main-1.png');
+  background-image   : url('../img/main/bg-main-1.png');
   background-repeat  : no-repeat;
   background-position: center bottom;
   background-size    : cover;
