--- a/#src/scss/_about.scss
+++ b/#src/scss/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  background: url('/img/about/bg-about-2.png') no-repeat bottom right / contain;
+  background: url('../img/about/bg-about-2.png') no-repeat bottom right / contain;
 
   .about__body {
     padding-bottom : 100px;
