--- a/#src/scss/_classes.scss
+++ b/#src/scss/_classes.scss
@@ -1,5 +1,5 @@
 .classes {
-  background: url('/img/classes/bg-classes-1.png') no-repeat center left/cover;
+  background: url('../img/classes/bg-classes-1.png') no-repeat center left/cover;
   position  : relative;
   padding   : 120px 0 100px;
 
@@ -57,7 +57,7 @@
   width     : 100%;
   height    : 100%;
   content   : " ";
-  background: url('/img/classes/bg-classes-2.png') no-repeat center top;
+  background: url('../img/classes/bg-classes-2.png') no-repeat center top;
   position  : absolute;
   top       : 0;
 }
